# wta_backend

./: .gitignore  README.md  celerybeat-schedule.bak  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: c7f490da45c4_name_not_unique.py  eefc6c7c30ed_initial.py
app/: config.py  crud.py  database.py  dependencies.py  models.py  router.py  service.py  tasks.py
